Added ffmpeg lib

--- a/Unit18_4_1.csproj
+++ b/Unit18_4_1.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="YoutubeExplode.Converter" Version="6.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ffmpeg.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
